--- a/Firebase/FirebaseApplication/app/src/main/res/layout/login_activity_layout.xml
+++ b/Firebase/FirebaseApplication/app/src/main/res/layout/login_activity_layout.xml
@@ -4,12 +4,20 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <EditText
+        android:id="@+id/et_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Username"
+        android:inputType="textPersonName" />
+
     <Space
         android:layout_width="match_parent"
         android:layout_height="30dp" />
 
     <EditText
-        android:id="@+id/et_username"
+        android:id="@+id/et_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -33,13 +41,13 @@
         android:layout_height="30dp" />
 
     <Button
-        android:id="@+id/bt_login"
+        android:id="@+id/bt_signin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Log In" />
 
     <TextView
-        android:id="@+id/tv_signin"
+        android:id="@+id/tv_signup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Dont have an Account? Click here"
