--- a/Firebase/FirebaseApplication/app/src/main/res/layout/main_menu_layout.xml
+++ b/Firebase/FirebaseApplication/app/src/main/res/layout/main_menu_layout.xml
@@ -5,20 +5,20 @@
     android:orientation="vertical">
 
     <Button
+        android:id="@+id/bt_profileView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="My Profile" />
+
+    <Button
         android:id="@+id/bt_gestureStart"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Gesture Start" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/bt_signOut"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="SIGN OUT" />
 </LinearLayout>
