--- a/Firebase/FirebaseApplication/app/src/main/res/layout/login_activity_layout.xml
+++ b/Firebase/FirebaseApplication/app/src/main/res/layout/login_activity_layout.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Username"
+        android:hint="Name"
         android:inputType="textPersonName" />
 
     <Space
