--- a/Firebase/FirebaseApplication/app/src/main/res/layout/main_menu_layout.xml
+++ b/Firebase/FirebaseApplication/app/src/main/res/layout/main_menu_layout.xml
@@ -4,6 +4,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="18sp" />
+
     <Button
         android:id="@+id/bt_profileView"
         android:layout_width="match_parent"
@@ -21,4 +28,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="SIGN OUT" />
+
 </LinearLayout>
