--- a/Firebase/FirebaseApplication/app/src/main/res/layout/main_menu_layout.xml
+++ b/Firebase/FirebaseApplication/app/src/main/res/layout/main_menu_layout.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/tv_greeting"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView"
