--- a/Firebase/FirebaseApplication/app/src/main/res/layout/gesture_activity_layout.xml
+++ b/Firebase/FirebaseApplication/app/src/main/res/layout/gesture_activity_layout.xml
@@ -5,29 +5,27 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tv_mainMenGreeting"
+        android:id="@+id/tv_gestGreeting"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:textAlignment="center"
+        android:textSize="24sp" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="20dp" />
+
+    <TextView
+        android:id="@+id/tv_gestDetails"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textAlignment="viewStart"
         android:textSize="18sp" />
 
     <Button
-        android:id="@+id/bt_profileView"
+        android:id="@+id/bt_submitData"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="My Profile" />
-
-    <Button
-        android:id="@+id/bt_gestureStart"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Gesture Start" />
-
-    <Button
-        android:id="@+id/bt_signOut"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="SIGN OUT" />
-
+        android:text="Button" />
 </LinearLayout>
