added nores in the register.java class
for better understanding of the code blocks

--- a/Firebase/FirebaseApplication/app/src/main/res/layout/register_activity_layout.xml
+++ b/Firebase/FirebaseApplication/app/src/main/res/layout/register_activity_layout.xml
@@ -38,7 +38,8 @@
     <Spinner
         android:id="@+id/sp_reg_gender"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:dropDownWidth="match_parent" />
 
     <Spinner
         android:id="@+id/sp_reg_city"
