--- a/LatestGestures/app/src/main/res/layout/activity_main.xml
+++ b/LatestGestures/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="Input Gesture" />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
