--- a/Firebase/FirebaseApplication/app/src/main/res/layout/gesture_activity_layout.xml
+++ b/Firebase/FirebaseApplication/app/src/main/res/layout/gesture_activity_layout.xml
@@ -11,6 +11,23 @@
         android:text="TextView"
         android:textSize="20sp" />
 
+    <TextView
+        android:id="@+id/tv_gesture"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tv_gest_counter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="20sp" />
+
     <Space
         android:layout_width="match_parent"
         android:layout_height="20dp" />
