--- a/LatestGestures/app/src/main/res/layout/activity_scroll.xml
+++ b/LatestGestures/app/src/main/res/layout/activity_scroll.xml
@@ -10,7 +10,7 @@
         android:id="@+id/text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SwipeY"
+        android:text="Scroll"
         android:textSize="25dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:orientation="vertical"
